Utility class for word-break. Fix for https://github.com/openshift/origin/issues/2560

--- a/assets/app/styles/_core.less
+++ b/assets/app/styles/_core.less
@@ -376,6 +376,11 @@ select:invalid {
   white-space: nowrap;
 }
 
+.break-word {
+  word-break: break-all; // Firefox
+  word-break: break-word; // Webkit and Microsoft
+}
+
 .nowrap {
   white-space: nowrap;
 }
